ISSUP-6104 add new REST APIs for marketplace app licenses
