# modules/dxp/apps/osb/osb-provisioning/osb-provisioning-license/osb-provisioning-license-service/src/main/java/com/liferay/osb/provisioning/license/internal/search/spi/model/index/contributor/LicenseKeyModelDocumentContributor.java
@@ -118,6 +118,9 @@ public class LicenseKeyModelDocumentContributor
 		document.addDateSortable(Field.CREATE_DATE, licenseKey.getCreateDate());
 		document.addDateSortable(
 			Field.MODIFIED_DATE, licenseKey.getModifiedDate());
+		document.addTextSortable(
+			"assetReceiptLicenseUuid", licenseKey.getAssetReceiptLicenseUuid());
+		document.addTextSortable("productId", licenseKey.getProductId());
 		document.addTextSortable("productName", licenseKey.getProductName());
 
 		_contributeSubscriptions(document, licenseKey.getLicenseKeyId());
